--- a/lucho.html
+++ b/lucho.html
@@ -12,6 +12,8 @@
     <img id="messi"  src="./messi.webp" alt="">
     <button id="botonImagen" >cambiar imagen</button>
     <button id="reset" > Reset</button>
+    <button id="cambiar" >  ¿?</button>
+    <p id="lionel" >messi</p>
 </body>
-<script src="condiciones.js"></script>
+<script src="lucho.js"></script>
 </html>
