--- a/lucho.html
+++ b/lucho.html
@@ -8,12 +8,11 @@
     <link rel="stylesheet" href="lucho.css">
 </head>
 <body>
-    <h1>hola</h1>
-    <img id="messi"  src="./messi.webp" alt="">
-    <button id="botonImagen" >cambiar imagen</button>
-    <button id="reset" > Reset</button>
-    <button id="cambiar" >  ¿?</button>
-    <p id="lionel" >messi</p>
+    <h1 id="saludo" >hola</h1>
+    <h1 id="nombre" >lucho</h1>
+    <h1 id="soy" >soy lucho</h1>
+    <button id="boton1" >cambiar</button>
+    <p id="messi" >messi:</p>
 </body>
 <script src="lucho.js"></script>
 </html>
