--- a/lucho2.html
+++ b/lucho2.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="lucho2.css">
 </head>
 <body>
-    <button id="#pizza" >pizza</button>
+    
     <div>
         <div id="empanada1" >
+            <button id="pizza" >pizza</button>
             <img id="carne" src="./carne.webp" alt="">
             <button id="empanada">cambiar</button>
             <p id="empanadacarne" >empanada de carne</p>
